crates/no_unwrap_or_else_panic/examples/fail_unwrap_in_rstest_empty_companion.stderr
error: Replace unwrap_or_else on `std::option::Option<i32>` with a non-panicking fallback.
  --> $DIR/fail_unwrap_in_rstest_empty_companion.rs:20:13
   |
LL |     let _ = Some(value).unwrap_or_else(|| panic!("empty companion {value}"));
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: The closure supplied to unwrap_or_else triggers a panic.
  --> $DIR/fail_unwrap_in_rstest_empty_companion.rs:20:13
   |
LL |     let _ = Some(value).unwrap_or_else(|| panic!("empty companion {value}"));
   |             ^^^^^^^^^^^
   = help: Propagate the error or use expect with a descriptive message instead of panicking.
note: the lint level is defined here
  --> $DIR/fail_unwrap_in_rstest_empty_companion.rs:11:10
   |
LL |     deny(no_unwrap_or_else_panic)
   |          ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

